# take-five

./: .env  .pdm-python  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/keywords/: admin.py  models.py
apps/keywords/features/keyword/: admin.py  models.py
apps/keywords/features/parameters/: admin.py  models.py  tests.py
apps/keywords/migrations/: 0001_initial.py  0002_alter_keywordarg_options_alter_keywordarg_keyword.py  0003_keyword_doc.py  0007_alter_keywordarg_default_value.py
i18n_bug/: admin.py  apps.py  models.py
i18n_bug/migrations/: 0001_initial.py  0002_alter_person_title.py
keywords/: admin.py  models.py
keywords/features/keyword/: admin.py  models.py
keywords/features/parameters/: admin.py
keywords/migrations/: 0004_keywordarg_unique_kw_arg.py  0005_alter_keyword_doc.py  0006_alter_keywordarg_default_value.py
take_five/: asgi.py  settings.py  urls.py  wsgi.py
teams/: admin.py  forms.py  models.py
teams/migrations/: 0001_initial.py  0002_player.py
