[project]
name = "take-five"
version = "0.1.0"
description = "Django improvisation"
dependencies = [
    "django~=4.2.15",
    "django-extensions==3.2.3",
    "django-jazzmin==3.0.0",
    "django-debug-toolbar>=4.4.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.26.0",
]
